// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterUserLayersContent works 1`] = `
Array [
  Array [
    "geovisio_blabla_pictures",
    Array [
      Array [
        "test",
        "true",
      ],
    ],
  ],
  Array [
    "geovisio_blabla_pictures_symbols",
    Array [
      Array [
        "test",
        "true",
      ],
    ],
  ],
  Array [
    "geovisio_pictures",
    Array [
      Array [
        "test",
        "true",
      ],
    ],
  ],
  Array [
    "geovisio_pictures_symbols",
    Array [
      Array [
        "test",
        "true",
      ],
    ],
  ],
]
`;

exports[`reloadLayersStyles works 1`] = `
Array [
  Array [
    "geovisio_blabla_pictures",
    "circle-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_pictures",
    "circle-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_blabla_pictures_symbols",
    "icon-image",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "id",
        ],
        undefined,
      ],
      "",
      Array [
        "==",
        Array [
          "get",
          "type",
        ],
        "equirectangular",
      ],
      "gvs-arrow-360",
      "gvs-arrow-flat",
    ],
  ],
  Array [
    "geovisio_blabla_pictures_symbols",
    "symbol-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_pictures_symbols",
    "icon-image",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "id",
        ],
        undefined,
      ],
      "",
      Array [
        "==",
        Array [
          "get",
          "type",
        ],
        "equirectangular",
      ],
      "gvs-arrow-360",
      "gvs-arrow-flat",
    ],
  ],
  Array [
    "geovisio_pictures_symbols",
    "symbol-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_blabla_sequences",
    "line-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_blabla_sequences",
    "line-cap",
    "square",
  ],
  Array [
    "geovisio_sequences",
    "line-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_sequences",
    "line-cap",
    "square",
  ],
]
`;

exports[`reloadLayersStyles works 2`] = `
Array [
  Array [
    "geovisio_blabla_pictures",
    "circle-color",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      "#34495E",
      Array [
        "==",
        Array [
          "get",
          "geovisio:status",
        ],
        "hidden",
      ],
      "#34495E",
      "#FF6F00",
    ],
  ],
  Array [
    "geovisio_blabla_pictures",
    "circle-radius",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      15,
      4.5,
      18,
      6,
      24,
      12,
    ],
  ],
  Array [
    "geovisio_blabla_pictures",
    "circle-opacity",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      15,
      0,
      16,
      1,
    ],
  ],
  Array [
    "geovisio_blabla_pictures",
    "circle-stroke-color",
    "#ffffff",
  ],
  Array [
    "geovisio_blabla_pictures",
    "circle-stroke-width",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      16,
      0,
      17,
      1,
      18,
      1.5,
      24,
      3,
    ],
  ],
  Array [
    "geovisio_pictures",
    "circle-color",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      "#34495E",
      Array [
        "==",
        Array [
          "get",
          "geovisio:status",
        ],
        "hidden",
      ],
      "#34495E",
      "#FF6F00",
    ],
  ],
  Array [
    "geovisio_pictures",
    "circle-radius",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      15,
      4.5,
      18,
      6,
      24,
      12,
    ],
  ],
  Array [
    "geovisio_pictures",
    "circle-opacity",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      15,
      0,
      16,
      1,
    ],
  ],
  Array [
    "geovisio_pictures",
    "circle-stroke-color",
    "#ffffff",
  ],
  Array [
    "geovisio_pictures",
    "circle-stroke-width",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      16,
      0,
      17,
      1,
      18,
      1.5,
      24,
      3,
    ],
  ],
  Array [
    "geovisio_blabla_sequences",
    "line-color",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      "#34495E",
      Array [
        "==",
        Array [
          "get",
          "geovisio:status",
        ],
        "hidden",
      ],
      "#34495E",
      "#FF6F00",
    ],
  ],
  Array [
    "geovisio_blabla_sequences",
    "line-width",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      0,
      0.5,
      10,
      2,
      14,
      4,
      16,
      5,
      22,
      3,
    ],
  ],
  Array [
    "geovisio_sequences",
    "line-color",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      "#34495E",
      Array [
        "==",
        Array [
          "get",
          "geovisio:status",
        ],
        "hidden",
      ],
      "#34495E",
      "#FF6F00",
    ],
  ],
  Array [
    "geovisio_sequences",
    "line-width",
    Array [
      "interpolate",
      Array [
        "linear",
      ],
      Array [
        "zoom",
      ],
      0,
      0.5,
      10,
      2,
      14,
      4,
      16,
      5,
      22,
      3,
    ],
  ],
]
`;

exports[`reloadVectorTiles works 1`] = `
Array [
  Array [
    Array [
      "https://bla.xyz/geovisio/x/y/z",
    ],
  ],
  Array [
    Array [
      "https://bla.xyz/geovisio_toto/x/y/z",
    ],
  ],
]
`;

exports[`setBackground works if raster is enabled 1`] = `
Array [
  Array [
    "gvs-aerial",
    "visibility",
    "visible",
  ],
]
`;

exports[`setBackground works if raster is enabled 2`] = `
Array [
  Array [
    CustomEvent {
      "isTrusted": false,
    },
  ],
]
`;

exports[`setVisibleUsers works when no users exists 1`] = `Array []`;

exports[`setVisibleUsers works when no users exists 2`] = `
Array [
  Array [
    CustomEvent {
      "isTrusted": false,
    },
  ],
]
`;

exports[`setVisibleUsers works when user already exist but is hidden 1`] = `
Array [
  CustomEvent {
    "isTrusted": false,
  },
  CustomEvent {
    "isTrusted": false,
  },
]
`;

exports[`setVisibleUsers works when user already exist but is hidden 2`] = `
Array [
  Array [
    "geovisio_blabla_pictures",
    "circle-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_pictures",
    "circle-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_blabla_pictures_symbols",
    "icon-image",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "id",
        ],
        undefined,
      ],
      "",
      Array [
        "==",
        Array [
          "get",
          "type",
        ],
        "equirectangular",
      ],
      "gvs-arrow-360",
      "gvs-arrow-flat",
    ],
  ],
  Array [
    "geovisio_blabla_pictures_symbols",
    "symbol-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_pictures_symbols",
    "icon-image",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "id",
        ],
        undefined,
      ],
      "",
      Array [
        "==",
        Array [
          "get",
          "type",
        ],
        "equirectangular",
      ],
      "gvs-arrow-360",
      "gvs-arrow-flat",
    ],
  ],
  Array [
    "geovisio_pictures_symbols",
    "symbol-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_blabla_sequences",
    "line-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_blabla_sequences",
    "line-cap",
    "square",
  ],
  Array [
    "geovisio_sequences",
    "line-sort-key",
    Array [
      "case",
      Array [
        "==",
        Array [
          "get",
          "hidden",
        ],
        true,
      ],
      90,
      10,
    ],
  ],
  Array [
    "geovisio_sequences",
    "line-cap",
    "square",
  ],
  Array [
    "geovisio_blabla_pictures",
    "visibility",
    "visible",
  ],
  Array [
    "geovisio_blabla_sequences",
    "visibility",
    "visible",
  ],
  Array [
    "geovisio_blabla_sequences_plus",
    "visibility",
    "visible",
  ],
  Array [
    "geovisio_blabla_grid",
    "visibility",
    "visible",
  ],
  Array [
    "geovisio_blabla_pictures_symbols",
    "visibility",
    "visible",
  ],
  Array [
    "geovisio_pictures",
    "visibility",
    "none",
  ],
  Array [
    "geovisio_sequences",
    "visibility",
    "none",
  ],
  Array [
    "geovisio_sequences_plus",
    "visibility",
    "none",
  ],
  Array [
    "geovisio_grid",
    "visibility",
    "none",
  ],
  Array [
    "geovisio_pictures_symbols",
    "visibility",
    "none",
  ],
]
`;
